HPA-17: use List.of, Set.of en Map.of where possible